--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -2,7 +2,7 @@
   "name": "hello-world",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Anthonycodinach.github.io/Anthony-Codinach-Retro-Portfolio",
+  "homepage": "https://Anthonycodinach.com",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
